HOD Change Log


Trunk (unreleased changes)

  IMPROVEMENTS

    HADOOP-2775.  Adds unit test framework for HOD.
    (Vinod Kumar Vavilapalli via ddas).

    HADOOP-2848. [HOD]hod -o list and deallocate works even after deleting
    the cluster directory. (Hemanth Yamijala via ddas)

    HADOOP-2899. [HOD] Cleans up hdfs:///mapredsystem directory after
    deallocation. (Hemanth Yamijala via ddas)

    HADOOP-2796. Enables distinguishing exit codes from user code vis-a-vis
    HOD's exit code. (Hemanth Yamijala via ddas)

    HADOOP-2947. HOD redirects stdout and stderr of daemons to assist
    getting stack traces. (Vinod Kumar Vavilapalli via yhemanth)

  BUG FIXES

    HADOOP-2924. Fixes an address problem to do with TaskTracker binding
    to an address. (Vinod Kumar Vavilapalli via ddas)

    HADOOP-2970. Fixes a problem to do with Wrong class definition for
    hodlib/Hod/hod.py for Python < 2.5.1.
    (Vinod Kumar Vavilapalli via ddas)

    HADOOP-2783. Fixes a problem to do with import in
    hod/hodlib/Common/xmlrpc.py. (Vinod Kumar Vavilapalli via ddas)

    HADOOP-2936. Fixes HOD in a way that it generates hdfs://host:port on the
    client side configs. (Vinod Kumar Vavilapalli via ddas)

    HADOOP-2983. [HOD] Fixes the problem - local_fqdn() returns None when
    gethostbyname_ex doesnt return any FQDNs. (Craig Macdonald via ddas)

    HADOOP-2982. Fixes a problem in the way HOD looks for free nodes.
    (Hemanth Yamijala via ddas)

    HADOOP-2855. Fixes the way HOD handles relative paths for cluster
    directory, script file and other options.
    (Vinod Kumar Vavilapalli via yhemanth)

Release 0.16.2 - 2008-04-02

  BUG FIXES

    HADOOP-3103. [HOD] Hadoop.tmp.dir should not be set to cluster
    directory. (Vinod Kumar Vavilapalli via ddas).

Release 0.16.1 - 2008-03-13

  INCOMPATIBLE CHANGES

    HADOOP-2861. Improve the user interface for the HOD commands.
    Command line structure has changed. (Hemanth Yamijala via nigel)

  IMPROVEMENTS
